--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,9 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 .env
-# testing
-/coverage
-
-# production
-/build
+node_modules
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
